--- a/style.css
+++ b/style.css
@@ -12,11 +12,13 @@ body {
   text-align: right;
 }
 
-.aaa img {
+.aaa
+img {
   width: 100%;
 }
 
-.aaa .more-inf {
+.aaa
+.more-inf {
   font-family: fantasy, cursive;
 }
 
@@ -47,11 +49,13 @@ ul {
   padding: 0px;
 }
 
-li, h3 {
+li,
+h3 {
   list-style: none;
 }
 
-input, button{
+input,
+button{
   outline: none;
 }
 
@@ -104,7 +108,8 @@ label[for="new-task"] {
   margin: 0 0 20px;
 }
 
-input #new-task {
+input
+#new-task {
   width: 318px;
 }
 
@@ -137,32 +142,42 @@ li > input[type="text"] {
   width: 226px;
 }
 
-button.delete img {
+button.delete 
+img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+button.delete
+img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul #completed-tasks label {
+ul
+#completed-tasks
+label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type="text"] {
+ul
+li
+input[type="text"] {
   display: none;
 }
 
-ul li.edit-mode input[type="text"] {
+ul
+li.edit-mode
+input[type="text"] {
   display: inline-block;
   width: 224px;
 }
 
-ul li.edit-mode label {
+ul
+li.edit-mode
+label {
   display: none;
 }
