--- a/style.css
+++ b/style.css
@@ -1,34 +1,34 @@
 /* Basic Style */
-body {
+.wrapper {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.wrapper-header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa
+.wrapper-header
 img {
   width: 100%;
 }
 
-.aaa
+.wrapper-header
 .more-inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
 
-.aaa { text-align: center;
+.wrapper-header { text-align: center;
 }
 
 }
-.centered-main-page-element {
+.wrapper-content {
   display: block;
   width: 500px;
   margin: 0 auto 0;
